WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295720
REGRESSION (
297118@main
): [ iPadOS ] 17x fast/page-color-sampling (layout-tests) are constant text failures
https://bugs.webkit.org/show_bug.cgi?id=295720
Summary
REGRESSION (297118@main): [ iPadOS ] 17x fast/page-color-sampling (layout-te...
Bryan Medina
Reported
2025-07-10 10:47:34 PDT
17 fast/page-color-sampling (layout-tests) are constant text failures on iPadOS HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Fpage-color-sampling%2Fcolor-sampling-fixed-ancestor-with-relative-container.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-fixed-container-under-subscroller.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-fixed-descendant-in-relative-container.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-fixed-popup.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-ignores-backdrop-filters.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-ignores-images.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-ignores-non-fixed-content.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-ignores-text.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-ignores-transparent-pointer-events-none-container.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-in-position-sticky.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-includes-sides-that-had-insets.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-includes-subframes.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-modal-popup.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-stability-for-same-element.html&test=fast%2Fpage-color-sampling%2Fcolor-sampling-while-rubber-banding.html&test=fast%2Fpage-color-sampling%2Fmaintain-sampled-color-when-scrolled-to-top.html&test=fast%2Fpage-color-sampling%2Fpage-color-sampling-skips-border-top.html
TEXT DIFFS CAN BE FOUND AT THE FOLLOWING LINK:
https://build.webkit.org/results/Apple-iPadOS-18-Simulator-Release-WK2-Tests/297197%40main%20(1440)/results.html
TEXT DIFF: * This is not the text diff for every single test, but this is the most common found in all tests (of type string). Was null (of type object).
Attachments
Add attachment
proposed patch, testcase, etc.
Bryan Medina
Comment 1
2025-07-10 11:12:32 PDT
I was able to reproduce all these test failures on iPad iOS ToT running the test as follows: run-webkit-tests --iPad-simulator <insert_test_name_here>
Radar WebKit Bug Importer
Comment 2
2025-07-10 11:13:04 PDT
<
rdar://problem/155542222
>
Bryan Medina
Comment 3
2025-07-10 11:14:16 PDT
I was able to bisect the regression point by testing
297118@main
and it failed, but it passed at
297117@main
. Therefore, I have concluded that
297118@main
is the regression point.
EWS
Comment 4
2025-07-10 11:31:27 PDT
Test gardening commit
297213@main
(5f825e86152a): <
https://commits.webkit.org/297213@main
> Reviewed commits have been landed. Closing PR #47834 and removing active labels.
Wenson Hsieh
Comment 5
2025-07-10 14:27:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47845
EWS
Comment 6
2025-07-10 18:32:15 PDT
Committed
297238@main
(e73bac5a990a): <
https://commits.webkit.org/297238@main
> Reviewed commits have been landed. Closing PR #47845 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug