Tools/WebKitTestRunner/TestOptions.cpp
@@ -216,6 +216,7 @@ const TestFeatures& TestOptions::defaults()
         features.doubleTestRunnerFeatures = {
             { "contentInset.top", 0 },
             { "obscuredInset.top", 0 },
+            { "obscuredInset.left", 0 },
             { "horizontalSystemMinimumLayoutMargin", 0 },
             { "deviceScaleFactor", 1 },
             { "viewHeight", 600 },
@@ -291,6 +292,7 @@ const std::unordered_map<std::string, TestHeaderKeyType>& TestOptions::keyTypeMa
 
         { "contentInset.top", TestHeaderKeyType::DoubleTestRunner },
         { "obscuredInset.top", TestHeaderKeyType::DoubleTestRunner },
+        { "obscuredInset.left", TestHeaderKeyType::DoubleTestRunner },
         { "horizontalSystemMinimumLayoutMargin", TestHeaderKeyType::DoubleTestRunner },
         { "deviceScaleFactor", TestHeaderKeyType::DoubleTestRunner },
         { "viewHeight", TestHeaderKeyType::DoubleTestRunner },
